; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_zset.c_zslParseLexRangeItem.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_zset.c_zslParseLexRangeItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i8* }

@C_ERR = common dso_local global i32 0, align 4
@shared = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@C_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zslParseLexRangeItem(%struct.TYPE_4__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  switch i32 %15, label %62 [
    i32 43, label %16
    i32 45, label %29
    i32 40, label %42
    i32 91, label %52
  ]

16:                                               ; preds = %3
  %17 = load i8*, i8** %8, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 1
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32, i32* @C_ERR, align 4
  store i32 %23, i32* %4, align 4
  br label %64

24:                                               ; preds = %16
  %25 = load i32*, i32** %7, align 8
  store i32 1, i32* %25, align 4
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @shared, i32 0, i32 1), align 4
  %27 = load i32*, i32** %6, align 8
  store i32 %26, i32* %27, align 4
  %28 = load i32, i32* @C_OK, align 4
  store i32 %28, i32* %4, align 4
  br label %64

29:                                               ; preds = %3
  %30 = load i8*, i8** %8, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 1
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %29
  %36 = load i32, i32* @C_ERR, align 4
  store i32 %36, i32* %4, align 4
  br label %64

37:                                               ; preds = %29
  %38 = load i32*, i32** %7, align 8
  store i32 1, i32* %38, align 4
  %39 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @shared, i32 0, i32 0), align 4
  %40 = load i32*, i32** %6, align 8
  store i32 %39, i32* %40, align 4
  %41 = load i32, i32* @C_OK, align 4
  store i32 %41, i32* %4, align 4
  br label %64

42:                                               ; preds = %3
  %43 = load i32*, i32** %7, align 8
  store i32 1, i32* %43, align 4
  %44 = load i8*, i8** %8, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 1
  %46 = load i8*, i8** %8, align 8
  %47 = call i32 @sdslen(i8* %46)
  %48 = sub nsw i32 %47, 1
  %49 = call i32 @sdsnewlen(i8* %45, i32 %48)
  %50 = load i32*, i32** %6, align 8
  store i32 %49, i32* %50, align 4
  %51 = load i32, i32* @C_OK, align 4
  store i32 %51, i32* %4, align 4
  br label %64

52:                                               ; preds = %3
  %53 = load i32*, i32** %7, align 8
  store i32 0, i32* %53, align 4
  %54 = load i8*, i8** %8, align 8
  %55 = getelementptr inbounds i8, i8* %54, i64 1
  %56 = load i8*, i8** %8, align 8
  %57 = call i32 @sdslen(i8* %56)
  %58 = sub nsw i32 %57, 1
  %59 = call i32 @sdsnewlen(i8* %55, i32 %58)
  %60 = load i32*, i32** %6, align 8
  store i32 %59, i32* %60, align 4
  %61 = load i32, i32* @C_OK, align 4
  store i32 %61, i32* %4, align 4
  br label %64

62:                                               ; preds = %3
  %63 = load i32, i32* @C_ERR, align 4
  store i32 %63, i32* %4, align 4
  br label %64

64:                                               ; preds = %62, %52, %42, %37, %35, %24, %22
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i32 @sdsnewlen(i8*, i32) #1

declare dso_local i32 @sdslen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
